background fix on mobile + reformating

--- a/main.css
+++ b/main.css
@@ -1,65 +1,81 @@
-body{
-    background-image:url("img/img1.jpg");
-    background-repeat: no-repeat;
+body {
+    background: no-repeat center center fixed;
+    background-image: url("img/img1.jpg");
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
-h1,h2,h3,h4,h5,p {
+
+h1, h2, h3, h4, h5, p {
     font-family: "Segoe UI Symbol";
     color: white;
 }
-.cont-head{
+
+.cont-head {
     background-color: #2C3639;
     text-align: center;
-    width:100%;
-    height:100px;
+    width: 100%;
+    height: 100px;
     border: 0px red;
     opacity: 0.35;
-    border-radius:80px;
-    transition:0.7s;
+    border-radius: 80px;
+    transition: 0.7s;
 }
-.cont-head:hover{
-    text-shadow: 1px 1px 9px white;
-    box-shadow: 1px 1px 15px grey;
-    opacity: 1
-}
-.cont-head-text {
-}
-.cont-bd{
-    background-color: #2C3639;
-    text-align: center;
-    width:40%;
-    height:400px;
-    border: 0px red;
-    position:absolute;top:200px;
-    opacity: 0.35;
-    border-radius:80px;
-    transition:0.7s;
-}
-.cont-bd:hover{
+
+.cont-head:hover {
     text-shadow: 1px 1px 9px white;
     box-shadow: 1px 1px 15px grey;
     opacity: 1
 }
 
-.cont-bd1{
+.cont-head-text {
+}
+
+.cont-bd {
     background-color: #2C3639;
     text-align: center;
-    width:40%;
-    height:400px;
+    width: 40%;
+    height: 400px;
     border: 0px red;
-    position:absolute;top:200px;
-    left:60%;
+    position: absolute;
+    top: 200px;
     opacity: 0.35;
-    border-radius:80px;
-    transition:0.7s;
+    border-radius: 80px;
+    transition: 0.7s;
 }
-.cont-bd1:hover{
+
+.cont-bd:hover {
     text-shadow: 1px 1px 9px white;
     box-shadow: 1px 1px 15px grey;
     opacity: 1
 }
-.icon_game_fc{
-    border:0px #2C3639;
+
+.cont-bd1 {
+    background-color: #2C3639;
+    text-align: center;
+    width: 40%;
+    height: 400px;
+    border: 0px red;
+    position: absolute;
+    top: 200px;
+    left: 60%;
+    opacity: 0.35;
+    border-radius: 80px;
+    transition: 0.7s;
+}
+
+.cont-bd1:hover {
+    text-shadow: 1px 1px 9px white;
+    box-shadow: 1px 1px 15px grey;
+    opacity: 1
+}
+
+.icon_game_fc {
+    border: 0px #2C3639;
     box-radius: 30px;
     border-radius: 9000px;
     width: 200px;
